fixed gallery stretching. tweaked responsive articles module for mobile

--- a/creators/css/archive-creators.less
+++ b/creators/css/archive-creators.less
@@ -1029,75 +1029,9 @@
 	}
 }
 
-.creators-single{
-	section.creators-owl-container{
-		padding:4rem 2rem;
-		background-color: #e9e9e9;
-		.owl-carousel{
-			padding: 0 50px;
-			.owl-stage{
-				display:block;
-				.owl-item{
-					flex-grow: 1;
-					display: inline-block;
-					vertical-align: middle;
-					background:black;
-					float:none;
-					a{
-						display:block;
-						overflow:hidden;
-					
-					}
-				}
-			}
-		}
 
-	}
 
-	.gear-carousel-container, .ec-carousel-container{
-		//padding:2rem 2rem;
-		.owl-carousel.gear-carousel, .owl-carousel.ec-carousel{
-			padding: 0 50px;
-			.owl-stage{
-				display:block;
-				.owl-item{
-					text-align:center;
-					background:none;
-					flex-grow: 1;
-					display: inline-block;
-					vertical-align: middle;
-					float:none;
-					.item{
-					    max-width: 300px;
-					    margin: auto;
-					}
-					img{
-						max-width: 200px !important;
-					    margin: auto;	
-					}
-					.creator-btn-container{
-						padding:20px 0 10px;
-					}
-					a{
-						display:block;
-						overflow:hidden;
-					
-					}
-				}
-			}
-			.owl-dots{display:none;}
-		}
-	}
 
-	@media (max-width:600px){
-		section.creators-owl-container{
-			//padding: 4rem 1rem;
-		}
-		.gear-carousel-container, .ec-carousel-container{
-			//padding:2rem 1rem;
-		}
-	}
-}
 
 .owl-prev{
 	position: absolute;
